force-app/main/default/objects/Expense__c/fields/Accommodation_place__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_place__c</fullName>
    <label>Accommodation place</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Class A Cities (State Capital/Metro Cities)</fullName>
            </value>
            <value>
                <fullName>Other Cities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>