force-app/main/default/objects/Expense__c/fields/Accomodation_Type__c.field-meta.xml
<CustomField>
    <fullName>Accomodation_Type__c</fullName>
    <label>Accomodation Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Class A Cities</fullName>
            </value>
            <value>
                <fullName>Other Cities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>