force-app/main/default/objects/Expense__c/fields/Allowance_Limit__c.field-meta.xml
<CustomField>
    <fullName>Allowance_Limit__c</fullName>
    <formula>IF(
  ISPICKVAL(Expense_Type__c, &apos;Travel Expense Request&apos;),
  IF(
    OR(ISPICKVAL(User_Role__c, &apos;SO&apos;), ISPICKVAL(User_Role__c, &apos;SSO&apos;)),
    IF(
      OR(ISPICKVAL(Category__c, &apos;Bus&apos;), ISPICKVAL(Category__c, &apos;Train&apos;)),
      1500,
      0
    ),
    0
  ),
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allowance Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>