force-app/main/default/objects/Expense__c/fields/Attendance_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Tracker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendance Tracker</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Attendance__c.Status__c</field>
            <operation>equals</operation>
            <value>Present</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Attendance__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>