force-app/main/default/objects/Expense__c/fields/Bike_Run_Km__c.field-meta.xml
<CustomField>
    <fullName>Bike_Run_Km__c</fullName>
    <label>Bike Run (Km)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>