force-app/main/default/objects/Expense__c/fields/Bill_Receipts__c.field-meta.xml
<CustomField>
    <fullName>Bill_Receipts__c</fullName>
    <label>Bill/ Receipts</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>