force-app/main/default/objects/Expense__c/fields/Car_Run_Km__c.field-meta.xml
<CustomField>
    <fullName>Car_Run_Km__c</fullName>
    <label>Car Run (Km)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>