force-app/main/default/objects/Expense__c/fields/Class_A_Cities__c.field-meta.xml
<CustomField>
    <fullName>Class_A_Cities__c</fullName>
    <label>Class A Cities</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Delhi</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Bengaluru</fullName>
            </value>
            <value>
                <fullName>Kolkata</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Ahmedabad</fullName>
            </value>
            <value>
                <fullName>Indore</fullName>
            </value>
            <value>
                <fullName>Vadodara</fullName>
            </value>
            <value>
                <fullName>Surat</fullName>
            </value>
            <value>
                <fullName>Jaipur</fullName>
            </value>
            <value>
                <fullName>Kota</fullName>
            </value>
            <value>
                <fullName>Lucknow</fullName>
            </value>
            <value>
                <fullName>Kanpur</fullName>
            </value>
            <value>
                <fullName>Pune</fullName>
            </value>
            <value>
                <fullName>Thrissur</fullName>
            </value>
            <value>
                <fullName>Nagpur</fullName>
            </value>
            <value>
                <fullName>Nadiad</fullName>
            </value>
            <value>
                <fullName>Patna</fullName>
            </value>
            <value>
                <fullName>Visakhapatnam</fullName>
            </value>
            <value>
                <fullName>Bhopal</fullName>
            </value>
            <value>
                <fullName>Nashik</fullName>
            </value>
            <value>
                <fullName>Jabalpur</fullName>
            </value>
            <value>
                <fullName>Gandhinagar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>