force-app/main/default/objects/Expense__c/fields/DA_Days__c.field-meta.xml
<CustomField>
    <fullName>DA_Days__c</fullName>
    <label>DA Days</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>