force-app/main/default/objects/Expense__c/fields/Expense_Category__c.field-meta.xml
<CustomField>
    <fullName>Expense_Category__c</fullName>
    <label>Expense Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily Allowance</fullName>
                <default>true</default>
                <label>Daily Allowance</label>
            </value>
            <value>
                <fullName>Travel Allowance</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Accomodation</fullName>
            </value>
            <value>
                <fullName>Phone Bill</fullName>
                <isActive>false</isActive>
                <label>Phone Bill</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>