force-app/main/default/objects/Expense__c/fields/Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>Expense_Type__c</fullName>
    <label>Expense Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Travel_Expense_Request</fullName>
                <label>Travel Expense Request</label>
            </value>
            <value>
                <fullName>Accommodation Request</fullName>
            </value>
            <value>
                <fullName>Miscellaneous Request</fullName>
            </value>
            <value>
                <fullName>Daily Allowance</fullName>
            </value>
            <value>
                <fullName>Travel Allowance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>