force-app/main/default/objects/Expense__c/fields/Manager_Comments__c.field-meta.xml
<CustomField>
    <fullName>Manager_Comments__c</fullName>
    <label>Manager Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>