force-app/main/default/objects/Expense__c/fields/Max_Limit_Message__c.field-meta.xml
<CustomField>
    <fullName>Max_Limit_Message__c</fullName>
    <formula>IF(
    AND(
        ISPICKVAL(User_Role__c, &quot;SO&quot;),
        ISPICKVAL(Expense_Type__c, &quot;Travel Expense&quot;),
        ISPICKVAL(Transport_Type__c, &quot;Bus&quot;)
    ),
    &quot;The maximum limit for this combination is Rs 1500.&quot;,
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Max limit is 1500</inlineHelpText>
    <label>Max Limit Message</label>
    <type>Text</type>
</CustomField>