force-app/main/default/objects/Expense__c/fields/Misc_Expense_Details__c.field-meta.xml
<CustomField>
    <fullName>Misc_Expense_Details__c</fullName>
    <label>Misc Expense Details</label>
    <length>100</length>
    <type>Text</type>
</CustomField>