force-app/main/default/objects/Expense__c/fields/TA_Days__c.field-meta.xml
<CustomField>
    <fullName>TA_Days__c</fullName>
    <label>TA Days</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>