force-app/main/default/objects/Expense__c/fields/User_Role__c.field-meta.xml
<CustomField>
    <fullName>User_Role__c</fullName>
    <label>User Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SO</fullName>
            </value>
            <value>
                <fullName>SSO</fullName>
            </value>
            <value>
                <fullName>RSM</fullName>
            </value>
            <value>
                <fullName>ZSM</fullName>
            </value>
            <value>
                <fullName>ASM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>