force-app/main/default/objects/Expense__c/fields/Visitors_Manager_Id__c.field-meta.xml
<CustomField>
    <fullName>Visitors_Manager_Id__c</fullName>
    <formula>Visitor_Name__r.ManagerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visitors Manager Id</label>
    <type>Text</type>
</CustomField>