force-app/main/default/objects/Expense__c/fields/Visitors_Role__c.field-meta.xml
<CustomField>
    <fullName>Visitors_Role__c</fullName>
    <formula>IF(
    ISBLANK(Visitor_Name__c),
    &quot;No Visitor Assigned&quot;,
    Visitor_Name__r.UserRoleId
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visitors Role</label>
    <type>Text</type>
</CustomField>