force-app/main/default/objects/Expense__c/recordTypes/Automated_Expense.recordType-meta.xml
<RecordType>
    <fullName>Automated_Expense</fullName>
    <active>true</active>
    <label>Automated Expense</label>
</RecordType>