force-app/main/default/objects/Expense__c/recordTypes/Miscellaneous_Expense.recordType-meta.xml
<RecordType>
    <fullName>Miscellaneous_Expense</fullName>
    <active>true</active>
    <label>Manual Expense</label>
</RecordType>