force-app/main/default/objects/Expense__c/validationRules/Limit_For_SO_Travel_Bus.validationRule-meta.xml
<ValidationRule>
    <fullName>Limit_For_SO_Travel_Bus</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(User_Role__c, &quot;SO&quot;),
    ISPICKVAL(Expense_Type__c, &quot;Travel Expense&quot;),
    ISPICKVAL(Transport_Type__c, &quot;Bus&quot;),
    Amount__c &gt; 1500
)</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>The maximum limit for SO role with Travel Expense and Bus as Transport Type is Rs 1500.</errorMessage>
</ValidationRule>