force-app/main/default/objects/Expense__c/validationRules/sfa_should_not_create_new.validationRule-meta.xml
<ValidationRule>
    <fullName>sfa_should_not_create_new</fullName>
    <active>false</active>
    <errorConditionFormula>IF($Profile.Name == &apos;SFA Profile&apos; &amp;&amp; ISNEW(),  true , false)</errorConditionFormula>
    <errorMessage>Please go to the &apos;Apply expense&apos; and create the expense</errorMessage>
</ValidationRule>