force-app/main/default/objects/Expense__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Expense_Type__c</columns>
    <columns>Visitor_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>System_Admin_Group</group>
    </sharedTo>
</ListView>