force-app/main/default/objects/Expense__c/listViews/My_Expenses.listView-meta.xml
<ListView>
    <fullName>My_Expenses</fullName>
    <columns>NAME</columns>
    <columns>Expense_Type__c</columns>
    <columns>Amount__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Visitor_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>My Expenses</label>
</ListView>